@@ -1,5 +1,6 @@
 ﻿using System;
 using System.Collections.Generic;
+using System.IO;
 using System.Linq;
 using System.Reflection;
 using System.Windows.Forms;
@@ -19,15 +20,7 @@ namespace Fb2ePubGui
         [STAThread]
         static void Main()
         {
-            string logPath = Application.LocalUserAppDataPath;
-            if (string.IsNullOrEmpty(logPath))
-            {
-                logPath = Application.UserAppDataPath;
-                if (string.IsNullOrEmpty(logPath))
-                {
-                    logPath = "logs";
-                }
-            }
+            string logPath = Path.Combine(Environment.GetFolderPath(Environment.SpecialFolder.LocalApplicationData), "Lord KiRon\\");
             GlobalContext.Properties["LogName"] = logPath;
             log = LogManager.GetLogger(Assembly.GetExecutingAssembly().GetType());
 
